--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,40 +3,45 @@ body {
 	height: 100%;
 }
 
-[data-theme="light"]body {
-	@apply bg-dark-100;
-	color: #7a4900;
+:root[data-theme="light"] {
+	--bg-color: #f4f4f5;
 }
 
-h1 {
-	font-family: var(--bigShouldsDisplay-font);
+:root[data-theme="dark"] {
+	--bg-color: #27272a;
 }
 
-a {
-	color: inherit;
-	text-decoration: none;
-}
+body {
+	transition: 0.5s;
+	background: --var(--bg-color);
 
-canvas {
-	min-height: 80vh;
-	touch-action: none;
-	position: relative;
-	z-index: -100;
-	animation: fade-in 2s ease 0.5s forwards;
-}
+	h1 {
+		font-family: var(--bigShouldsDisplay-font);
+	}
 
-main.index {
-	margin-top: -40px;
-}
-button {
-	border: 1px solid #fff;
+	a {
+		color: inherit;
+		text-decoration: none;
+	}
+
+	canvas {
+		min-height: 80vh;
+		touch-action: none;
+		position: relative;
+		z-index: -100;
+		animation: fade-in 2s ease 0.5s forwards;
+	}
+
+	main.index {
+		margin-top: -40px;
+	}
+	button {
+		border: 1px solid #fff;
+	}
 }
 
 @media (prefers-color-scheme: dark) {
 	html {
 		color-scheme: dark;
-	}
-	[data-theme="dark"]body {
-		@apply bg-dark-800;
 	}
 }
