--- a/src/components/indexTitle/indexTitle.module.scss
+++ b/src/components/indexTitle/indexTitle.module.scss
@@ -1,3 +1,18 @@
+.indexTitle {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	canvas {
+		min-height: 100vh;
+		touch-action: none;
+		position: relative;
+		z-index: -100;
+		animation: fade-in 2s ease 0.5s forwards;
+	}
+}
+
 .container {
 	display: block;
 	height: 110px;
@@ -9,5 +24,5 @@
 .title {
 	font-size: 1.4rem;
 	text-align: center;
-	font-family: var(--firaCode-font);
+	text-shadow: 0px 0px 1px rgb(0 0 0 / 20%), 0px 0px 1px rgb(1 0 5 / 10%);
 }
