--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,7 @@
 html,
 body {
 	height: 100%;
+	font-size: 14px;
 }
 
 :root[data-theme="light"] {
@@ -18,7 +19,7 @@ body {
 	background: var(--bg-color);
 
 	h1 {
-		font-family: var(--bigShouldsDisplay-font);
+		font-family: var(--oswald-font);
 	}
 
 	a {
@@ -26,36 +27,65 @@ body {
 		text-decoration: none;
 	}
 
-	header {
-		background: rgba(255, 255, 255, 0.1);
-		backdrop-filter: blur(50px);
-		-webkit-backdrop-filter: blur(50px);
-		position: relative;
-		z-index: 10;
-		border-bottom-left-radius: 4px;
-		border-bottom-right-radius: 4px;
-		.logo {
-			path {
-				fill: var(--font-color);
+	#__next {
+		height: 100%;
+		header {
+			background: rgba(255, 255, 255, 0.1);
+			backdrop-filter: blur(50px);
+			-webkit-backdrop-filter: blur(50px);
+			position: relative;
+			z-index: 10;
+			border-bottom-left-radius: 4px;
+			border-bottom-right-radius: 4px;
+			.logo {
+				path {
+					fill: var(--font-color);
+				}
 			}
 		}
-	}
 
-	main {
-		font-family: var(--firaCode-font);
-		&.index {
-			position: absolute;
-			top: 0;
-			bottom: 0;
-			left: 0;
-			right: 0;
-			canvas {
-				min-height: 100vh;
-				touch-action: none;
-				position: relative;
-				z-index: -100;
-				animation: fade-in 2s ease 0.5s forwards;
+		.layout {
+			position: relative;
+			height: 100%;
+			.page-wrap {
+				display: flex;
+				position: absolute;
+				height: calc(100% - 0.5rem);
+				width: 100%;
 			}
+			main {
+				min-height: calc(100% - 51px);
+				font-family: var(--firaCode-font);
+				font-size: 2rem;
+				position: relative;
+				@apply container mx-auto p-2;
+				section {
+					@apply p-8;
+				}
+			}
+			&.index {
+				main {
+					height: auto;
+				}
+			}
+		}
+
+		.exit-box {
+			color: #fff;
+			display: inline-block;
+			margin-left: 14px;
+			cursor: pointer;
+			/* margin:0 14px; */
+		}
+
+		.exit-box [type="checkbox"] {
+			margin: 0 8px;
+		}
+
+		footer {
+			position: absolute;
+			bottom: 0;
+			right: 0;
 		}
 	}
 }
