--- a/src/components/backgroundTitle/backgroundTitle.module.scss
+++ b/src/components/backgroundTitle/backgroundTitle.module.scss
@@ -1,10 +1,13 @@
 .title {
-	position: absolute;
-	top: 0;
-	left: 0;
-	opacity: 0.02;
-	letter-spacing: -1rem;
-	font-size: 60vh;
+	// position: absolute;
+	// top: 100px;
+	// right: -35px;
+	opacity: 0.2;
+	// letter-spacing: -1rem;
+	font-size: 20px;
 	line-height: 1;
+	margin: 0;
 	pointer-events: none;
+	// transform: rotateZ(-90deg);
+	font-family: var(--firaCode-font);
 }
