--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,12 +19,29 @@ body {
 	background: var(--bg-color);
 
 	h1 {
-		font-family: var(--oswald-font);
+		padding: 0 0 0 20px;
+		display: flex;
+		align-items: center;
+		gap: 8px;
+		&::before {
+			content: "┗";
+			display: block;
+			margin: 4px 0 0;
+		}
+	}
+
+	h2 {
+		font-family: var(--firaCode-font);
+		@apply text-size-3xl text-yellow-400;
 	}
 
 	a {
 		color: inherit;
 		text-decoration: none;
+	}
+
+	p + p {
+		margin: 0.2rem 0;
 	}
 
 	#__next {
@@ -33,7 +50,8 @@ body {
 			background: rgba(255, 255, 255, 0.1);
 			backdrop-filter: blur(50px);
 			-webkit-backdrop-filter: blur(50px);
-			position: relative;
+			position: sticky;
+			top: 0;
 			z-index: 10;
 			border-bottom-left-radius: 4px;
 			border-bottom-right-radius: 4px;
@@ -49,18 +67,42 @@ body {
 			height: 100%;
 			.page-wrap {
 				display: flex;
+				flex-direction: column;
 				position: absolute;
-				height: calc(100% - 0.5rem);
+				min-height: calc(100% - 0.5rem);
 				width: 100%;
 			}
 			main {
 				min-height: calc(100% - 51px);
-				font-family: var(--firaCode-font);
-				font-size: 2rem;
 				position: relative;
 				@apply container mx-auto p-2;
 				section {
-					@apply p-8;
+					p {
+						font-family: var(--firaCode-font);
+						font-size: 1.8rem;
+						font-weight: 100;
+						position: relative;
+						padding: 0.5rem 0 0 4rem;
+						img {
+							display: inline-block;
+							vertical-align: baseline;
+						}
+					}
+					@apply m-20 relative;
+					&::before {
+						font-size: 10rem;
+						line-height: 8rem;
+						font-family: var(--outfit-font);
+						font-weight: 100;
+						color: #ffffff;
+						left: -180px;
+						@apply absolute opacity-20 text-stroke-white transition;
+					}
+					&:hover {
+						&::before {
+							@apply text-yellow-400;
+						}
+					}
 				}
 			}
 			&.index {
