--- a/src/components/indexTitle/indexTitle.module.scss
+++ b/src/components/indexTitle/indexTitle.module.scss
@@ -23,6 +23,15 @@
 }
 .title {
 	font-size: 1.4rem;
+	font-weight: 300;
+	letter-spacing: 1px;
+	color: #ffffff;
 	text-align: center;
 	text-shadow: 0px 0px 1px rgb(0 0 0 / 20%), 0px 0px 1px rgb(1 0 5 / 10%);
+	border: none;
+	position: relative;
+	display: block;
+	&::before {
+		display: none;
+	}
 }
