--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,11 +7,19 @@ body {
 :root[data-theme="light"] {
 	--bg-color: #f4f4f5;
 	--font-color: #27272a;
+	--header-bg: rgba(0, 0, 0, 0.1);
+	--function-color: #0284c7;
+	--return-color: #e879f9;
+	--code-color: #fbbf24;
 }
 
 :root[data-theme="dark"] {
 	--bg-color: #27272a;
 	--font-color: #f4f4f5;
+	--header-bg: rgba(255, 255, 255, 0.1);
+	--function-color: #0284c7;
+	--return-color: #e879f9;
+	--code-color: #fbbf24;
 }
 
 body {
@@ -32,7 +40,7 @@ body {
 
 	h2 {
 		font-family: var(--firaCode-font);
-		@apply text-size-3xl text-yellow-400;
+		@apply text-size-3xl;
 	}
 
 	a {
@@ -47,9 +55,9 @@ body {
 	#__next {
 		height: 100%;
 		header {
-			background: rgba(255, 255, 255, 0.1);
-			backdrop-filter: blur(50px);
-			-webkit-backdrop-filter: blur(50px);
+			background: var(--header-bg);
+			backdrop-filter: blur(20px);
+			-webkit-backdrop-filter: blur(20px);
 			position: sticky;
 			top: 0;
 			z-index: 10;
@@ -82,27 +90,8 @@ body {
 						font-size: 1.8rem;
 						font-weight: 100;
 						position: relative;
-						padding: 0.5rem 0 0 4rem;
-						img {
-							display: inline-block;
-							vertical-align: baseline;
-						}
 					}
 					@apply m-20 relative;
-					&::before {
-						font-size: 10rem;
-						line-height: 8rem;
-						font-family: var(--outfit-font);
-						font-weight: 100;
-						color: #ffffff;
-						left: -180px;
-						@apply absolute opacity-20 text-stroke-white transition;
-					}
-					&:hover {
-						&::before {
-							@apply text-yellow-400;
-						}
-					}
 				}
 			}
 			&.index {
