change hover effect

--- a/src/components/logo/logo.module.scss
+++ b/src/components/logo/logo.module.scss
@@ -4,9 +4,13 @@
 			@apply relative z-10;
 			width: 80px;
 			height: 15px;
+			path {
+				@apply transition;
+			}
 		}
 	}
-	@apply list-none cursor-pointer py-2 relative after:inset-0 after:origin-right after:z-0 after:content-DEFAULT after:bg-yellow-400 after:block after:absolute after:transition hover:after:origin-left;
+	// @apply list-none cursor-pointer py-2 relative after:inset-0 after:origin-right after:z-0 after:content-DEFAULT after:bg-yellow-400 after:block after:absolute after:transition hover:after:origin-left;
+	@apply cursor-pointer py-2 relative
 	&::after {
 		transform: scaleX(0);
 	}
@@ -16,7 +20,8 @@
 	&:hover {
 		svg {
 			path {
-				fill: black !important;
+				// fill: black !important;
+				@apply !fill-yellow-400 transition;
 			}
 		}
 	}
